--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "turbin3_Q3_indralukmana_week1_nft"]
 	path = turbin3_Q3_indralukmana_week1_nft
 	url = git@github.com:indralukmana/turbin3_Q3_indralukmana_week1_nft.git
+[submodule "week2_vault"]
+	path = week2_vault
+	url = git@github.com:indralukmana/turbin3_Q3_indralukmana_week2_vault.git
