feat: :sparkles: change submodules naming

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,14 +1,14 @@
 [submodule "turbin3_Q3_indralukmana_week0_prerequisite-typescript"]
-	path = turbin3_Q3_indralukmana_week0_prerequisite-typescript
+	path = week0_prerequisite-typescript
 	url = git@github.com:indralukmana/turbin3_Q3_indralukmana_week0_prerequisite-typescript.git
 [submodule "turbin3_Q3_indralukmana_week0_prerequisite-rust"]
-	path = turbin3_Q3_indralukmana_week0_prerequisite-rust
+	path = week0_prerequisite-rust
 	url = git@github.com:indralukmana/turbin3_Q3_indralukmana_week0_prerequisite-rust.git
 [submodule "turbin3_Q3_indralukmana_week1_spl"]
-	path = turbin3_Q3_indralukmana_week1_spl
+	path = week1_spl
 	url = git@github.com:indralukmana/turbin3_Q3_indralukmana_week1_spl.git
 [submodule "turbin3_Q3_indralukmana_week1_nft"]
-	path = turbin3_Q3_indralukmana_week1_nft
+	path = week1_nft
 	url = git@github.com:indralukmana/turbin3_Q3_indralukmana_week1_nft.git
 [submodule "week2_vault"]
 	path = week2_vault
